Added capabilites module and JSON.net

--- a/IntAirAct/IntAirAct.csproj
+++ b/IntAirAct/IntAirAct.csproj
@@ -38,6 +38,9 @@
     <Reference Include="Nancy.Hosting.Self">
       <HintPath>..\packages\Nancy.Hosting.Self.0.11.0\lib\net40\Nancy.Hosting.Self.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.6\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Action.cs" />
+    <Compile Include="CapabilitiesModule.cs" />
     <Compile Include="Capability.cs" />
     <Compile Include="IntAirActException.cs" />
     <Compile Include="HelloModule.cs" />
