--- a/IntAirAct/packages.config
+++ b/IntAirAct/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Nancy" version="0.11.0" />
   <package id="Nancy.Hosting.Self" version="0.11.0" />
+  <package id="Newtonsoft.Json" version="4.5.6" />
 </packages>
