--- a/IntAirAct/packages.config
+++ b/IntAirAct/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Firefly" version="0.4" />
+  <package id="Gate" version="0.3.6" />
+  <package id="Gate.Adapters.Nancy" version="0.3.6" />
+  <package id="Gate.Hosts.Firefly" version="0.3.6" />
   <package id="Nancy" version="0.11.0" />
-  <package id="Nancy.Hosting.Self" version="0.11.0" />
   <package id="Newtonsoft.Json" version="4.5.6" />
+  <package id="Owin" version="0.7" />
 </packages>
