--- a/IntAirAct/IntAirAct.csproj
+++ b/IntAirAct/IntAirAct.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestAsString.cs" />
     <Compile Include="ResponseExtensions.cs" />
+    <Compile Include="ThreadUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
