--- a/IntAirAct/IntAirAct.csproj
+++ b/IntAirAct/IntAirAct.csproj
@@ -64,12 +64,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Action.cs" />
+    <Compile Include="Model\IAAction.cs" />
     <Compile Include="DefaultIntAirActBootstrapper.cs" />
     <Compile Include="CapabilitiesModule.cs" />
-    <Compile Include="Model\Capability.cs" />
+    <Compile Include="Model\IACapability.cs" />
     <Compile Include="IntAirActException.cs" />
-    <Compile Include="Model\Device.cs" />
+    <Compile Include="Model\IADevice.cs" />
     <Compile Include="IAIntAirAct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestAsString.cs" />
