--- a/IntAirAct/packages.config
+++ b/IntAirAct/packages.config
@@ -7,4 +7,5 @@
   <package id="Nancy" version="0.11.0" />
   <package id="Newtonsoft.Json" version="4.5.6" />
   <package id="Owin" version="0.7" />
+  <package id="RestSharp" version="104.1" targetFramework="net40-Client" />
 </packages>
