--- a/IntAirAct/IntAirAct.csproj
+++ b/IntAirAct/IntAirAct.csproj
@@ -69,7 +69,7 @@
   <ItemGroup>
     <Compile Include="IAServer.cs" />
     <Compile Include="Model\IAAction.cs" />
-    <Compile Include="DefaultIntAirActBootstrapper.cs" />
+    <Compile Include="Nancy\NancyBootstrapper.cs" />
     <Compile Include="Model\IACapability.cs" />
     <Compile Include="IntAirActException.cs" />
     <Compile Include="Model\IADevice.cs" />
@@ -77,9 +77,9 @@
     <Compile Include="Model\IARequest.cs" />
     <Compile Include="Model\IAResponse.cs" />
     <Compile Include="Model\IARoute.cs" />
-    <Compile Include="NancyRouteAdapter.cs" />
+    <Compile Include="Nancy\NancyRouteModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RebuildableCache.cs" />
+    <Compile Include="Nancy\NancyRebuildableCache.cs" />
     <Compile Include="RequestAsString.cs" />
     <Compile Include="ResponseExtensions.cs" />
   </ItemGroup>
