--- a/IntAirAct/IntAirAct.csproj
+++ b/IntAirAct/IntAirAct.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Model\IAResponse.cs" />
     <Compile Include="Model\IARoute.cs" />
     <Compile Include="Nancy\NancyRouteModule.cs" />
+    <Compile Include="Nancy\NancyServerAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Nancy\NancyRebuildableCache.cs" />
     <Compile Include="RequestAsString.cs" />
