Output log messages from ServiceDiscovery

--- a/IntAirActImageWindows/app.config
+++ b/IntAirActImageWindows/app.config
@@ -8,4 +8,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.diagnostics>
+    <sources>
+      <source name="ServiceDiscovery" switchValue="All"/>
+    </sources>
+  </system.diagnostics>
 </configuration>
