--- a/IntAirActImageWindows/IntAirActImageWindows.csproj
+++ b/IntAirActImageWindows/IntAirActImageWindows.csproj
@@ -144,9 +144,9 @@
       <Project>{8A1CECE0-6F76-40A8-AEDC-B3D241D8A962}</Project>
       <Name>IntAirAct</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ZeroConf\ZeroConf.csproj">
-      <Project>{F585073E-EB3C-41DB-B8BE-2335029780D7}</Project>
-      <Name>ZeroConf</Name>
+    <ProjectReference Include="..\ServiceDiscovery\ServiceDiscovery.csproj">
+      <Project>{CD87E926-3CD6-4878-8EDE-9EB6600C75DF}</Project>
+      <Name>ServiceDiscovery</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
