Properly set up IntAirAct, new route handling

--- a/IntAirActImageWindows/app.config
+++ b/IntAirActImageWindows/app.config
@@ -11,6 +11,7 @@
   <system.diagnostics>
     <sources>
       <source name="ServiceDiscovery" switchValue="All"/>
+      <source name="IntAirActImageWindows" switchValue="All"/>
     </sources>
   </system.diagnostics>
 </configuration>
