--- a/IntAirAct/IntAirAct.csproj
+++ b/IntAirAct/IntAirAct.csproj
@@ -67,9 +67,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAClient.cs" />
     <Compile Include="IAServer.cs" />
     <Compile Include="Model\IAAction.cs" />
-    <Compile Include="Model\RequestExtensions\IARequestExtensions.cs" />
+    <Compile Include="Model\IADeSerializable.cs" />
     <Compile Include="Nancy\NancyBootstrapper.cs" />
     <Compile Include="IntAirActException.cs" />
     <Compile Include="Model\IADevice.cs" />
@@ -82,7 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Nancy\NancyRebuildableCache.cs" />
     <Compile Include="Nancy\NancyRequestExtensions.cs" />
-    <Compile Include="ResponseExtensions.cs" />
+    <Compile Include="RestSharp\RestSharpClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
