Renamed IADeSerializable to IADeSerialization

--- a/IntAirAct/IntAirAct.csproj
+++ b/IntAirAct/IntAirAct.csproj
@@ -69,7 +69,7 @@
   <ItemGroup>
     <Compile Include="IAClient.cs" />
     <Compile Include="IAServer.cs" />
-    <Compile Include="Model\IADeSerializable.cs" />
+    <Compile Include="Model\IADeSerialization.cs" />
     <Compile Include="Nancy\NancyBootstrapper.cs" />
     <Compile Include="IntAirActException.cs" />
     <Compile Include="Model\IADevice.cs" />
