Added tests for Serialization

--- a/IntAirActTests/IntAirActTests.csproj
+++ b/IntAirActTests/IntAirActTests.csproj
@@ -77,6 +77,10 @@
     <Compile Include="IASerializationTests.cs" />
     <Compile Include="IADeserializationTests.cs" />
     <Compile Include="IARouteTest.cs" />
+    <Compile Include="Model\IAModelInheritance.cs" />
+    <Compile Include="Model\IAModelReference.cs" />
+    <Compile Include="Model\IAModelWithFloatProperty.cs" />
+    <Compile Include="Model\IAModelWithIntProperty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
