--- a/ServiceDiscovery/ServiceDiscovery.nuspec
+++ b/ServiceDiscovery/ServiceDiscovery.nuspec
@@ -6,8 +6,8 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://opensource.org/licenses/MIT/licenseUrl>
-    <projectUrl>https://github.com/ase-lab/IntAirActCS/projectUrl>
+    <licenseUrl>http://opensource.org/licenses/MIT</licenseUrl>
+    <projectUrl>https://github.com/ase-lab/IntAirActCS</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>Copyright © 2012 Arlo O'Keeffe, ASE Group of Frank Maurer (University of Calgary)</copyright>
