--- a/IntAirAct/IntAirAct.nuspec
+++ b/IntAirAct/IntAirAct.nuspec
@@ -22,6 +22,7 @@
       <dependency id="Gate.Hosts.Firefly" version="[0.3.6]" />
       <dependency id="Newtonsoft.Json" version="4.5.6" />
       <dependency id="RestSharp" version="104.1" />
+      <dependency id="ServiceDiscovery" version="1.0" />
     </dependencies>
   </metadata>
 </package>
