--- a/IntAirAct/packages.config
+++ b/IntAirAct/packages.config
@@ -5,7 +5,7 @@
   <package id="Gate.Adapters.Nancy" version="0.3.6" />
   <package id="Gate.Hosts.Firefly" version="0.3.6" />
   <package id="Nancy" version="0.11.0" />
-  <package id="Newtonsoft.Json" version="4.5.6" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40-Client" />
   <package id="Owin" version="0.7" />
   <package id="RestSharp" version="104.1" targetFramework="net40-Client" />
 </packages>
