--- a/IntAirAct/IntAirAct.csproj
+++ b/IntAirAct/IntAirAct.csproj
@@ -126,6 +126,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\csharp-monads\Monads\Monads.csproj">
+      <Project>{10D4DA24-86C8-4A79-9205-7DD4FCCB3B73}</Project>
+      <Name>Monads</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ServiceDiscovery\ServiceDiscovery.csproj">
       <Project>{CD87E926-3CD6-4878-8EDE-9EB6600C75DF}</Project>
       <Name>ServiceDiscovery</Name>
